# smart-test-orchestrator

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yaml
configs/: environments.yaml  execution_profiles.yaml  mapping.yaml  orchestrator.yaml  repositories.yaml
docs/: architecture.md  data-model.md  execution-flow.md
examples/: sample_github_event.json  sample_mapping.yaml  sample_multi_repo_request.json  schedule.yaml
scripts/: run_local.sh  seed_mongo.py  simulate_request.sh
src/orchestrator/: main.py  settings.py
src/orchestrator/api/: dependencies.py  routes.py  schemas.py
src/orchestrator/db/: collections.py  mongo.py
src/orchestrator/domain/: enums.py  exceptions.py  models.py  policies.py  schedule_models.py
src/orchestrator/execution/: base_executor.py  executor_router.py  github_actions_executor.py  local_maven_executor.py  local_python_executor.py  local_ts_executor.py
src/orchestrator/repositories/: config_repository.py  mongo_execution_repository.py  (+3 more)
tests/: conftest.py
tests/e2e/: test_multi_repo_flow.py
tests/integration/: test_config_repository.py  test_execute_endpoint.py  test_mongo_execution_repository.py  test_plan_endpoint.py  test_schedule_endpoints.py
tests/unit/: test_change_analyzer.py  test_execution_planner.py  test_executor_router.py  test_flaky_detector.py  test_github_schedule_workflow.py  test_result_aggregator.py  test_schedule_parser.py  test_schedule_repo_scanner.py  test_test_selector.py
(+24 files in other folders)
